tests/fixtures/invalid/goto_statement.c
int main() {
    goto done;
    return 0;
done:
    return 1;
}
